# itk-torch-transform-bridge

./: setup.cfg
.github/workflows/: test-action.yml
src/: bridge_utils.py  itk_torch_affine_matrix_bridge.py  itk_torch_ddf_bridge.py  itk_torch_transform_bridge.py  run_tests.py  test_cases.py  test_utils.py
test/: test_grid_sample.py  test_monai.py
