[metadata]
name = itk_torch_transform_bridge
version = 0.0.1
author = Hastings Greer
author_email = t@hgreer.com
description = create itk transforms with deep learning registration libraries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/InsightSoftwareConsortium/itk-torch-transform-bridge
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.4

install_requires =
    torch
    itk==5.3rc4

[options.packages.find]
where = src

